Redescribe libada-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -256,8 +256,12 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>libada-branch</dt>
   <dd>This branch exists to solve
-  <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>,
-  by breaking out the Ada runtime and utilities into a libada directory.</dd>
+  <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>
+  and others, by breaking out the Ada runtime and utilities into a libada
+  directory.  Current work is devoted to cleaning up the configure and
+  make machinery used for libada, and separating it as much as possible from
+  the GCC build machinery.  <a href="mailto:neroden@gcc.gnu.org">Nathanael
+  Nerode</a> is maintaining this branch.</dd>
 
   <dt>java-gui-branch</dt>
   <dd>This is a temporary branch for development of java GUI libraries (AWT and
