* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-03-29.
+2004-04-02.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -57,6 +57,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.lang.Object</td> <td class="needsmerge"><a href="compare/java.lang.Object.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">java.lang.PosixProcess</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Runtime</td> <td class="needsmerge"><a href="compare/java.lang.Runtime.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.SecurityManager</td> <td class="needsmerge"><a href="compare/java.lang.SecurityManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.String</td> <td class="needsmerge"><a href="compare/java.lang.String.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.StringBuffer</td> <td class="needsmerge"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.System</td> <td class="needsmerge"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
@@ -86,6 +87,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.CollationElementIterator</td> <td class="needsmerge"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.DecimalFormat</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Properties</td> <td class="needsmerge"><a href="compare/java.util.Properties.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
@@ -111,6 +113,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
