--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -233,6 +233,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>i386-pc-sco3.2v5.0.6</td>
+<td>SCO OSR5 v5.0.6</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00077.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.5.1</td>
 <td>Sun ld and as</td>
 <td>Bootstrap (C, C++, Obj-C):
@@ -826,11 +834,19 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
-<td>powerpc-apple-darwin-7.2.0</td>
+<td>powerpc-apple-darwin7.2.0</td>
 <td>Mac OS X 10.3.2</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00171.html">3.3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-03/msg00010.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.3.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00054.html">3.3.3</a>
 </td>
 </tr>
 
