2004-04-03  Steve Kargl  <kargl@troutmask.apl.washington.edu>
	* compilerstatus.html, extensions.html, index.html,
	librarystatus.html, todo.html, usage.html:
	Change G95 to gfortran; expand contractions to correct English;
	remove text that states that *.f files are compiled by g77;
	correct subject-verb conjugation problems.
	* contributors.html: Add Bud Davis and Scott Robert Ladd.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -8,13 +8,13 @@
 
 <h1>Welcome to the home of<br />GNU Fortran 95</h1>
 
-<p>The GNU Fortran 95 project, or G95, is developing a Fortran 95
+<p>The GNU Fortran 95 project, or gfortran, is developing a Fortran 95
 compiler front end, as well as runtime libraries, for 
-GCC, the GNU Compiler Collection.  G95 development is a part of the
+GCC, the GNU Compiler Collection.  Gfortran development is a part of the
 <a href="http://www.gnu.org/">GNU Project</a>, aiming to bring free
-number crunching to all GNU system variants, including GNU/Linux.
-The G95 development effort uses an open development environment in
-order to attract a larger team of developers and to ensure that G95 can
+number crunching to all GNU system variants.
+The gfortran development effort uses an open development environment in
+order to attract a larger team of developers and to ensure that gfortran can
 work on multiple architectures and diverse environments.</p>
 
 <p>In particular, the project wishes to reach the users of the
@@ -30,13 +30,15 @@ mailing list; for details please refer to our
 
 <h2>Project goal</h2>
 <p>We strive to provide a high quality release, which we want to work
-well on a variety of native (including GNU/Linux) targets.  We do not
-believe we can make the best Fortran 95 compiler, but we want it to be
-adequate.</p>
-<p>The focus is on standard conformance and on good performance of the
-executables produced by the compiler.  Secondary goals include
-reasonable compile speed, a small memory foot print, and the ability
+well on a variety of native targets.  Although we
+believe we cannot make the best Fortran 95 compiler for any given target,
+we want gfortran to be adequate.</p>
+
+<p>The focus is on conformance to the Fortran 95 standard and on good
+performance of the executables produced by the compiler.  Secondary goals
+include reasonable compile speed, a small memory foot print, and the ability
 to build a cross-compiler.</p>
+
 <p>We expect to provide the following
 <a href="extensions.html">language extensions</a>.</p>
 
@@ -48,7 +50,8 @@ We also keep a <a href="todo.html">TODO list</a>.</p>
 
 <h2>Contributing</h2>
 <p>We encourage everyone to <a href="../contribute.html">contribute changes</a>
-and help test G95.  G95 is developed on the so-called "tree-ssa" branch of GCC.
+and help test gfortran.  Gfortran is developed on the so-called "tree-ssa"
+branch of GCC.
 We provide read access to our development sources for everybody with
 <a href="../projects/tree-ssa/">anonymous CVS</a>.
 Daily snapshots of the branch are also <a
@@ -60,8 +63,8 @@ available</a>.</p>
 use the compiler once you have built it (or downloaded the binary).</p>
 
 <h2>Suggested reading</h2>
-<p>We provide links to some <a href="../readings.html#fortran">information</a> relevant to
-Fortran programmers.</p>
+<p>We provide links to some <a href="../readings.html#fortran">information</a>
+relevant to Fortran programmers.</p>
 
 
 <h2>News/Announcements</h2>
@@ -73,8 +76,8 @@ page is preserved for historical reasons.</p>
 <dt><b>July 05, 2003</b></dt>
 <dd>New x86 GNU/Linux binaries have been released
 (<a href="http://sourceforge.net/project/showfiles.php?group_id=70680">download</a>).
-Note these tend to get out of date fairly quicky, so it's recommended
-that you compile your own from GCC CVS if possible.</dd>
+Note these tend to get out of date fairly quicky, so it is recommended
+that you compile gfortran from GCC CVS if possible.</dd>
 
 <dt><b>July 27, 2003</b></dt>
 <dd>gcc-g95 has been integrated into the <a
@@ -95,7 +98,7 @@ These include a complete FORALL implementation and some support for internal
 IO, amongst other things.</dd>
 
 <dt><b>June 28, 2003</b></dt>
-<dd>We're sorry that anonymous access to our CVS is not up-to-date and
+<dd>We are sorry that anonymous access to our CVS is not up-to-date and
 therefore unusable to non-developers.  This is due to ongoing problems
 with the SourceForge servers.</dd>
 
