--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>G95: Runtime library status</title>
+<title>gfortran: Runtime library status</title>
 </head>
 
 <body>
-<h1>G95: Runtime library status</h1>
+<h1>gfortran: Runtime library status</h1>
 
 <h2>Contents</h2>
 
@@ -36,8 +36,8 @@ available, or to fall back to a call to <code>libm</code> if not.</p>
 <p>Implementation of some non-elemental intrinsic functions (eg. DOT_PRODUCT,
 AVERAGE) is not yet optimal.  This is hard because we have to make decisions
 whether to use inline code (good for small arrays as no function call
-overhead) or generate function calls (good for large arrays as it allows use of
-hand-optimized assembly routines, SIMD instructions, etc.)</p>
+overhead occurs) or generate function calls (good for large arrays as it allows
+use of hand-optimized assembly routines, SIMD instructions, etc.)</p>
 
 <p>Implementations marked <b>*</b> are performed by the frontend, and
 are never seen by the code generation routines.  Other calls may also
