--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>G95: Open Projects</title>
+<title>gfortran: Open Projects</title>
 </head>
 
 <body>
 
-<h1>G95: Open Projects</h1>
+<h1>gfortran: Open Projects</h1>
 
 <p>This list is probably not complete, but it seems long enough
-already :-)  Some of the items are also filed as a bug report
+already.  Some of the items are also filed as a bug reports
 in our <a href="http://gcc.gnu.org/bugzilla/">bugzilla problem
 report database</a> as indicated below.</p>
 
@@ -32,7 +32,7 @@ report database</a> as indicated below.</p>
   <li>Improve error printing for diagnostics within simplification
   functions.</li>
   <li>See about making Emacs-parsable error messages.</li>
-  <li>Don't bother storing non-parameter variable initializers in modules.</li>
+  <li>Do not bother storing non-parameter variable initializers in modules.</li>
   <li>Check for improper (full section) use of assumed size arrays.</li>
   <li>Do something about the expr-&gt;symbol vs expr-&gt;value.function.esym mess.</li>
 </ul>
@@ -54,7 +54,7 @@ report database</a> as indicated below.</p>
   <li>Finish compiler side of intrinsic functions.</li>
   <li>Produce debugging information.</li>
   <li>Improve generated code (lots of room for that).</li>
-  <li>Don't create array descriptors where we don't need them (temporary
+  <li>Do not create array descriptors where we do not need them (temporary
       arrays).</li>
   <li>Support large (unexpanded) array constructors as variable
       initializers.</li>
@@ -87,7 +87,7 @@ report database</a> as indicated below.</p>
 <ul>
   <li>Figure out what causes the remaining testsuite parse failures.</li>
   <li>Add more testcases to the execution test suite.</li>
-  <li>Add negative tests (ie check invalid code is rejected).</li>
+  <li>Add negative tests (i.e. check invalid code is rejected).</li>
 </ul>
 
 
