--- a/htdocs/fortran/contributors.html
+++ b/htdocs/fortran/contributors.html
@@ -31,7 +31,9 @@ As of July 25th, 2003, g95 is part of GCC (as gfortran).</p>
 
 <h2>Small patches (no copyright assignment)</h2>
 <ul>
+   <li>Bud Davis</li>
    <li>Niels Kristian Bech Jensen</li>
+   <li>Scott Robert Ladd</li>
    <li>Steven G. Johnson</li>
    <li>Tobias Schlueter</li>
 </ul>
