--- a/htdocs/fortran/usage.html
+++ b/htdocs/fortran/usage.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>G95: Using the Compiler</title>
+<title>gfortran: Using the Compiler</title>
 </head>
 
 <body>
-<h1>G95: Using the Compiler</h1>
+<h1>gfortran: Using the Compiler</h1>
 
 <h2>Contents</h2>
 <ul>
@@ -15,39 +15,39 @@
     <li><a href="#fixed">Compiling Fixed Form Sources</a></li>
     <li><a href="#fname">Compiling Files Not Named
                                    <code>*.f9[05]</code></a></li>
-    <li><a href="#g77">Compatibility With G77</a></li>
-    <li><a href="#fend">Running the Compiler Frontend</a></li>
+    <li><a href="#g77">Compatibility With g77</a></li>
+    <li><a href="#fend">Running the Compiler front end</a></li>
     </ul>
 </li>
 </ul>
 
 <h2><a name="intro">Introduction</a></h2>
 <p>
-This page is meant to give a quick overview on how to use G95. It
+This page is meant to give a quick overview on how to use gfortran. It
 is merely a substitute for a complete manual, which has not yet been
 written.
 </p>
 
 <p>
-G95 builds on GCC, and thus
+Gfortran builds on GCC, and thus
 shares most characteristics with it. If you know how to use GCC, there
 will not be much new information for you in this document. Especially,
 the options for optimization and the generation of debugging
-information will not be outlined here.
+information are not outlined here.
 </p>
 
 <h2><a name="bu">Basic Usage</a></h2>
 <p>
-G95 is used to compile a source file, <code>source.f90</code>, to
+Gfortran is used to compile a source file, <code>source.f90</code>, to
 an object file, <code>object.o</code>, or an executable,
 <code>executable</code>. Along the way it generates module description
 files for the modules it encounters, these are named
-<code><i>nameofmodule</i>.mod</code>. If a module is used, G95 will
-read from these same file. 
+<code><i>nameofmodule</i>.mod</code>. If a module is used, gfortran will
+read from these same files. 
 </p>
 
 <p>
-In order to compile the source file <code>source.f90</code>
+In order to compile the source file <code>source.f90</code>,
 one would run: <code>gfortran -c source.f90</code><br />
 The output file will automatically be named
 <code>source.o</code>. This is an object file, which cannot be executed.
@@ -71,49 +71,42 @@ One may also skip the separate compilation step, and enter a command
 such as <code>gfortran -o executable source1.f90 source2.f90</code> which
 will compile the source files <code>source1.f90</code> and
 <code>source2.f90</code>, link and generate the executable
-<code>executable</code> in one step. You can also put object files on this command
-line, they will be automatically linked in during the link step.
+<code>executable</code> in one step. You can also put object files on this
+command line, they will be automatically linked in during the link step.
 </p>
 
 <h2><a name="ao">Advanced Options</a></h2>
 <p>
-Sometimes the basic possibilities given above don't match the user's
+Sometimes the basic possibilities given above do not match the user's
 needs. Therefore this section outlines other stuff the user might
 want to know. 
 </p>
 
 <h3><a name="fixed">Compiling Fixed Form Sources</a></h3>
 <p>
-When <code>gfortran</code> is run on a file, whose name ends in <code>.f90</code> or
-<code>.f95</code>, g95 assumes a free form source file. If that file
+When <code>gfortran</code> is run on a file, whose name ends in
+<code>.f90</code> or
+<code>.f95</code>, gfortran assumes a free form source file. If that file
 actually is a fixed form source file, the user has to give the
 <code>-ffixed-form</code> command line option. The precise semantics
-of this option, and other options relating to fixed form vs. free form
-input are the same as in G77, and may be found in G77's documentation.
+of this option, and other options relating to fixed form versus free form
+input are the same as in g77, and may be found in g77's documentation.
 </p>
 
 <h3><a name="fname">Compiling Files Not Named <code>*.f9[05]</code></a></h3>
 <p>
-When running <code>gfortran</code> one actually doesn't run the compiler,
+When running <code>gfortran</code> one actually does not run the compiler,
 but the compiler driver. This driver interprets the command
 line options given, and hands the work off to the actual compiler,
 the assembler, and the linker. By default, this compiler driver
 decides by the extensions of the given file names what to do. A file
-named <code>foo.c</code> is handed to the C compiler, a file named
-<code>bar.f</code> is handed to the Fortran 77 compiler, a file named
+named <code>foo.c</code> is handed to the C compiler and a file named
 <code>moo.f90</code> is handed to the Fortran 95 compiler, etc. To
 overrule this behavior, one has to precede the filename by the argument
 <code>-x <i>lang</i></code>, where <code><i>lang</i></code> is a string
 identifying the requested language. For Fortran 95 this is
 <code>f95</code>.
 </p>
-
-<p>
-It is important to notice that files named <code>*.f</code> are by
-default assumed to be written in Fortran 77, and are not handled by
-G95. In order to compile such files with G95, one thus has to explicitly
-give <code>-x f95</code>, as in <code>gfortran -c -x f95 bar.f</code>.
-</p> 
 
 <p>
 Since Fortran allows for two different kinds of input, free form
@@ -126,41 +119,41 @@ be explicitly given. This may be done by the command line options
 described above, which may also be used to override these rules.
 </p>
 
-<h3><a name="g77">Compatibility with G77</a></h3>
+<h3><a name="g77">Compatibility with g77</a></h3>
 <p>
 In order to efficiently implement the passing of array sections,
 binary compatibility to Fortran 77 had to be abandoned. If the user
 wishes to link his sources with old Fortran 77 codes, the command line
 option <code>-fg77-calls</code> changes back to the old calling
-convention used by G77.
+convention used by g77.
 </p>
 
 <p>
-When linking with code compiled by G77, one also has to take care, because
-G77 and G95 use different libraries. Especially I/O might get messed
-up due to this. Your safest bet is to only use I/O in either the G77 compiled
-parts or the G95 compiled parts, but not both, and to use the compiler
+When linking with code compiled by g77, one also has to take care, because
+g77 and gfortran use different libraries. Especially I/O might get messed
+up due to this. Your safest bet is to only use I/O in either the g77 compiled
+parts or the g95 compiled parts, but not both, and to use the compiler
 driver of the part which uses I/O in the final link step. There might be
-circumstances where doing I/O in both works, but there's nothing
+circumstances where doing I/O in both works, but there is nothing
 guaranteed. In the final link step you should also explicitly specify
-the libraries of both compilers, i.e. <code>-lgfortran</code> for G95,
-<code>-lg2c</code> for G77.
+the libraries of both compilers, i.e. <code>-lgfortran</code> for gfortran,
+<code>-lg2c</code> for g77.
 </p>
 
 <h3><a name="fend">Running the Compiler Frontend</a></h3>
 <p>
-One may use G95 as a syntax checker (or verify that G95's frontend
-correctly accepts/rejects a program), by specifying
-<code>-fsyntax-only</code> on the command line. G95 will then not
+One may use gfortran as a syntax checker (or verify that gfortran's frontend
+correctly accepts or rejects a program), by specifying
+<code>-fsyntax-only</code> on the command line. Gfortran will then not
 generate object files.
 </p>
 
 <p>
 When given the command line option <code>-fdump-parse-tree</code>,
-G95 will print a representation of the parsed program, detailing both
+gfortran will print a representation of the parsed program, detailing both
 the data objects and the executable statements of the program in a
-Lisp-inspired notation. One remark for Fortran oldtimers:
-<code>ASSIGN</code> in these dumps doesn't refer to the
+Lisp-inspired notation. One remark for Fortran old timers:
+<code>ASSIGN</code> in these dumps does not refer to the
 <code>ASSIGN</code> statement, but to the operation of assignment,
 i.e. sloppily speaking, the <code>=</code> operator.
 </p>
