2004-04-03  Toon Moene  <toon@moene.indiv.nluug.nl>
	* contributors.html: Bud Davis belongs in an other
	category.

--- a/htdocs/fortran/contributors.html
+++ b/htdocs/fortran/contributors.html
@@ -1,6 +1,9 @@
 <html>
+<head>
+<title>Contributors to gfortran</title>
+</head>
 <body>
-<h1>Contributors to G95</h1>
+<h1>Contributors to gfortran</h1>
 
 <p>Andy Vaught started writing the parser for g95 in the summer of
 1999.  Early 2000 he moved the project to SourceForge.  In
@@ -31,7 +34,6 @@ As of July 25th, 2003, g95 is part of GCC (as gfortran).</p>
 
 <h2>Small patches (no copyright assignment)</h2>
 <ul>
-   <li>Bud Davis</li>
    <li>Niels Kristian Bech Jensen</li>
    <li>Scott Robert Ladd</li>
    <li>Steven G. Johnson</li>
@@ -42,6 +44,7 @@ As of July 25th, 2003, g95 is part of GCC (as gfortran).</p>
 <h2>Small fixes</h2>
 <ul>
    <li>Toon Moene</li>
+   <li>Bud Davis</li>
 </ul>
 
 
