2004-04-03  Toon Moene  <toon@moene.indiv.nluug.nl>
	* contributors.html: Supply missing </body>, </html>
	at end.

--- a/htdocs/fortran/contributors.html
+++ b/htdocs/fortran/contributors.html
@@ -55,3 +55,5 @@ As of July 25th, 2003, g95 is part of GCC (as gfortran).</p>
    <li>W. Clodius</li>
    <li>Claus Fischer</li>
 </ul>
+</body>
+</html>
