* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-04-02.
+2004-04-03.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -83,12 +83,19 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.nio.MappedByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.nio.channels.Channels</td> <td class="needsmerge"><a href="compare/java.nio.channels.Channels.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.nio.channels.FileChannelImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.rmi.MarshalledObject</td> <td class="needsmerge"><a href="compare/java.rmi.MarshalledObject.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.Security</td> <td class="needsmerge"><a href="compare/java.security.Security.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.spec.DSAParameterSpec</td> <td class="needsmerge"><a href="compare/java.security.spec.DSAParameterSpec.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.spec.DSAPrivateKeySpec</td> <td class="needsmerge"><a href="compare/java.security.spec.DSAPrivateKeySpec.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.spec.DSAPublicKeySpec</td> <td class="needsmerge"><a href="compare/java.security.spec.DSAPublicKeySpec.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.AttributedCharacterIterator</td> <td class="needsmerge"><a href="compare/java.text.AttributedCharacterIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationElementIterator</td> <td class="needsmerge"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.CollationKey</td> <td class="needsmerge"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DecimalFormat</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Map</td> <td class="needsmerge"><a href="compare/java.util.Map.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Properties</td> <td class="needsmerge"><a href="compare/java.util.Properties.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.logging.Level</td> <td class="needsmerge"><a href="compare/java.util.logging.Level.diff">Diff</a></td> </tr>
@@ -109,10 +116,12 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.spi.RegisterableService</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.spi.ServiceRegistry</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.naming.directory.SearchControls</td> <td class="needsmerge"><a href="compare/javax.naming.directory.SearchControls.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.naming.spi.DirStateFactory</td> <td class="needsmerge"><a href="compare/javax.naming.spi.DirStateFactory.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.rmi.BAD_OPERATION</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.rmi.ORB</td> <td>No</td> </tr>
 <tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
