Add headings to group branches. Clean-up.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -153,10 +153,12 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <h3><a name="devbranches">Active Development Branches</a></h3>
 
+<h4>General Infrastructure</h4>
+
 <dl>
 
   <dt><a href="projects/tree-ssa/">tree-ssa-20020619-branch</a></dt>
-  <dd>Work on implementing SSA analysis and optimization for trees 
+  <dd>Work on implementing SSA analysis and optimization for trees
   is done in this branch.</dd>
 
   <dt>tree-profiling-branch</dt>
@@ -168,35 +170,41 @@ particular releases or snapshots or the latest snapshot.  </p>
   branch shall contain only patches not acceptable for tree-ssa because of
   the pre-merge freeze.</dd>
 
-  <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt> 
+  <dt><a href="projects/tree-ssa/lno.html">lno-branch</a></dt>
   <dd>A sub-branch of tree-ssa that aims at implementing a loop
   nest optimizer at the tree level.</dd>
 
   <dt><a href="projects/strees/index.html">stree-branch</a></dt>
-  <dd>This branch is for improving compilation speed and reducing
-  memory use by representing declarations as small flat data
-  structures whenever possible, lazily expanding them into full trees
-  when necessary.  This branch is being maintained by Matt Austern,
-  Robert Bowdidge, Geoff Keating and Mike Stump.  Patches should be
-  marked with the tag <code>[stree]</code> in the subject line.</dd>
+  <dd>This branch is for improving compilation speed and reducing memory
+  use by representing declarations as small flat data structures whenever
+  possible, lazily expanding them into full trees when necessary.  This
+  branch is being maintained by Matt Austern, Robert Bowdidge, Geoff
+  Keating, and Mike Stump.  Patches should be marked with the tag
+  <code>[stree]</code> in the subject line.</dd>
 
   <dt><a href="projects/cfg.html">rtlopt-branch</a></dt>
-  <dd>This branch is the successor to the cfg-branch, with the
-  exception that it is based on GCC pre-3.4.  The purpose of the branch
-  is to develop and test infrastructure for CFG based code improving
-  transformations on RTL.</dd>
+  <dd>This branch is the successor to the cfg-branch, with the exception
+  that it is based on GCC pre-3.4.  The purpose of the branch is to develop
+  and test infrastructure for CFG based code improving transformations on
+  RTL.</dd>
 
   <dt>new-regalloc-branch</dt>
-  <dd>Daniel Berlin and Michael Matz are working on an implementation of a 
-  graph-coloring register allocator on this branch. It is known to bootstrap 
-  under x86-linux and ppc-linux.</dd>
+  <dd>Daniel Berlin and Michael Matz are working on an implementation
+  of a graph-coloring register allocator on this branch. It is known to
+  bootstrap under x86-linux and ppc-linux.</dd>
 
   <dt>compile-server-branch</dt>
   <dd>This branch is aimed at improving compile speed by caching work
-  done between compilations.  The work saved is mainly related to
-  header file processing.  This branch is maintained by Mike Stump and
-  Per Bothner.  Patches should be marked with the tag
-  <code>[cs]</code> in the subject line.</dd>
+  done between compilations.  The work saved is mainly related to header
+  file processing.  This branch is maintained by Mike Stump and Per Bothner.
+  Patches should be marked with the tag <code>[cs]</code> in the subject
+  line.</dd>
+
+</dl>
+
+<h4>Architecture-specific</h4>
+
+<dl>
 
   <dt>csl-arm-branch</dt>
   <dd>CodeSourcery branch for developing ARM back end improvements.
@@ -211,20 +219,19 @@ particular releases or snapshots or the latest snapshot.  </p>
   line.</dd>
 
   <dt>hammer-3_3-branch</dt>
-  <dd>The goal of this branch is to have a stable
-  compiler based on GCC 3.3 with improved performance for AMD's
-  64-bit Hammer CPUs.  The branch is maintained by Jan Hubicka &lt;<a
-  href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas Jaeger
-  &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.  Patches added
-  on this branch might not be appropriate for the GCC 3.3 branch due
-  to our policies concerning release branches.  All patches will be
-  added to mainline CVS (for 3.4).  The branch is regularly merged
-  with the GCC 3.3 branch.</dd>
+  <dd>The goal of this branch is to have a stable compiler based on GCC 3.3
+  with improved performance for AMD's 64-bit Hammer CPUs. The branch is
+  maintained by Jan Hubicka &lt;<a href="mailto:jh@suse.cz">jh@suse.cz</a>&gt;
+  and Andreas Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.
+  Patches added on this branch might not be appropriate for the GCC 3.3
+  branch due to our policies concerning release branches.  All patches
+  will be added to mainline CVS (for 3.4).  The branch is regularly
+  merged with the GCC 3.3 branch.</dd>
 
   <dt>gcc-3_3-e500-branch</dt>
-  <dd>This branch is for backporting the PowerPC/E500 back end to GCC
-  3.3.  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html"
-  >this message</a> for details.</dd>
+  <dd>This branch is for backporting the PowerPC/E500 back end to GCC 3.3.
+  See <a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00733.html">this
+  message</a> for details.</dd>
 
   <dt>apple-ppc-branch</dt>
   <dd>This branch is for various improvements in use at Apple and to
@@ -232,40 +239,46 @@ particular releases or snapshots or the latest snapshot.  </p>
   at Apple.  Patches should be marked with the tag
   <code>[apple-ppc]</code> in the subject line.</dd>
 
+</dl>
+
+<h4>Language-specific</h4>
+
+<dl>
+
   <dt><a href="projects/cxx-reflection/">cxx-reflection-branch</a></dt>
-  <dd>Part of the work on providing support for compile time
-  reflection in C++ is done in this branch.</dd>
+  <dd>Part of the work on providing support for compile time reflection
+  in C++ is done in this branch.</dd>
 
   <dt>objc-improvements-branch</dt>
   <dd>This branch was originally used to merge Objective-C bug fixes and
   enhancements from Apple Computer into the FSF tree; this has now been
   completed.  Presently, the purpose of the branch is to implement the
   Objective-C++ language in the FSF GCC source tree. The message thread
-  starting <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00535.html">
-  here</a> describes this at more length.  This branch is being maintained
-  by <a href="mailto:zlaski@apple.com"> Zem Laski &lt;zlaski@apple.com&gt;
-  </a>.</dd>
+  starting <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00535.html">here</a>
+  describes this at more length.  This branch is being maintained by Zem
+  Laski &lt;<a href="mailto:zlaski@apple.com">zlaski@apple.com</a>&gt;.</dd>
 
   <dt>libobjc-branch</dt>
-  <dd>The branch is aimed to clean up libobjc and make it run
-  on Darwin.  Patches should be marked with the tag <code>
-  [libobjc-branch]</code> in the subject line. Patches can
-  be approved by <a href="mailto:pinskia@gcc.gnu.org">Andrew 
-  Pinski</a> or <a href="mailto:n.pero@mi.flashnet.it">
-  Nicola Pero</a>.</dd>
+  <dd>The branch is aimed to clean up libobjc and make it run on Darwin.
+  Patches should be marked with the tag <code>[libobjc-branch]</code>
+  in the subject line. Patches can be approved by Andrew Pinski
+  &lt;<a href="mailto:pinskia@gcc.gnu.org">pinskia@gcc.gnu.org</a>&gt;
+  or Nicola Pero
+  &lt;<a href="mailto:n.pero@mi.flashnet.it">n.pero@mi.flashnet.it</a>&gt;.</dd>
 
   <dt>libada-branch</dt>
   <dd>This branch exists to solve
   <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=5911">bug 5911</a>
   and others, by breaking out the Ada runtime and utilities into a libada
   directory.  Current work is devoted to cleaning up the configure and
-  make machinery used for libada, and separating it as much as possible from
-  the GCC build machinery.  <a href="mailto:neroden@gcc.gnu.org">Nathanael
-  Nerode</a> is maintaining this branch.</dd>
+  make machinery used for libada, and separating it as much as possible
+  from the GCC build machinery.  Nathanael Nerode
+  &lt;<a href="mailto:neroden@gcc.gnu.org">neroden@gcc.gnu.org</a>&gt;
+  is maintaining this branch.</dd>
 
   <dt>java-gui-branch</dt>
-  <dd>This is a temporary branch for development of java GUI libraries (AWT and
-  Swing) in the libjava directory.</dd>
+  <dd>This is a temporary branch for development of java GUI libraries
+  (AWT and Swing) in the libjava directory.</dd>
 
 </dl>
 
@@ -273,23 +286,13 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <dl>
 
-  <dt>cp-parser-branch</dt>
-  <dd>This branch has been merged into the mainline.</dd>
-
-  <dt>cp-parser-branch-2</dt>
-  <dd>This branch has been merged into the mainline.</dd>
-
-  <dt>pch-branch</dt>
-  <dd>This branch has been merged into the mainline.</dd>
-
-  <dt>gcc-3_4-basic-improvements-branch</dt>
-  <dd>This branch has been merged into the mainline.</dd>
-
-  <dt>mips-3_4-rewrite-branch</dt>
-  <dd>This branch has been merged into the mainline.</dd>
-
-  <dt>dfa-branch</dt>
-  <dd>This branch has been merged into the mainline.</dd>
+  <dt>cp-parser-branch<br />
+  cp-parser-branch-2<br />
+  pch-branch<br />
+  gcc-3_4-basic-improvements-branch<br />
+  mips-3_4-rewrite-branch<br />
+  dfa-branch</dt>
+  <dd>These branches have been merged into the mainline.</dd>
 
   <dt>cfg-branch</dt>
   <dd>This branch was created to develop and test infrastructure
@@ -300,19 +303,19 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>tree-ssa-cfg-branch</dt>
   <dd>This branch has been merged into the tree-ssa-20020619-branch.</dd>
-  
-  <dt><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></dt> 
-  <dd>The purpose of this branch was to improve GCC's tree based 
-  optimizations.  The patches of this branch have been moved to
-  the <code>tree-ssa-20020619-branch</code> branch.</dd>
 
-  <dt>faster-compiler-branch</dt> 
+  <dt><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></dt>
+  <dd>The purpose of this branch was to improve GCC's tree based
+  optimizations.  The patches of this branch have been moved to the
+  tree-ssa-20020619-branch.</dd>
+
+  <dt>faster-compiler-branch</dt>
   <dd>This was a temporary branch for compiler speedups for GCC 3.4.
   See <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00498.html">this
   thread</a> for discussion of possible work still to be done in this
   area.  The branch is unmaintained at present.</dd>
 
-  <dt>gomp-01-branch</dt> 
+  <dt>gomp-01-branch</dt>
   <dd>This branch was created to allow the
   <a href="http://savannah.nongnu.org/projects/gomp/">GOMP</a>
   project to implement <a href="http://www.openmp.org/">OpenMP</a>
