Document -Wstrict-aliasing=2.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -36,6 +36,14 @@
 
 <h2>New Languages and Language specific improvements</h2>
 
+<h3>C and Objective-C</h3>
+
+  <ul>
+    <li>The <code>-Wstrict-aliasing=2</code> option has been added.  This
+        warning catches all unsafe cases, but it may also give a warning for
+        some cases that are safe.</li>
+  </ul>
+
 <h2>New Targets and Target Specific Improvements</h2>
 
 <h3>H8/300</h3>
