Mention again the problem with Emacs.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -84,6 +84,11 @@
     As a temporary workaround, <code>-fno-unit-at-a-time</code> can be used,
     but this scheme may not be supported by future releases of GCC.
     </li>
+    <li>GCC 3.4 automatically places zero-initialized variables in
+        the <code>.bss</code> section on some operating systems.
+        Versions of GNU Emacs up to (and including) 21.3 will not work
+        correctly when using this optimization; you can use
+        <code>-fno-zero-initialized-in-bss</code> to disable it.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
