--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -26,6 +26,9 @@
 <h2><a name="news">Latest News</a></h2>
 
 <dl>
+<dt>2004-04-05</dt>
+<dd><p>Merge status: <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00217.html">http://gcc.gnu.org/ml/gcc/2004-04/msg00217.html</a>.</p></dd>
+
 <dt>2004-03-12</dt>
 <dd><p>Merge status: <a
 href="http://gcc.gnu.org/ml/gcc/2004-03/msg00596.html">http://gcc.gnu.org/ml/gcc/2004-03/msg00596.html</a>.</p>
