Mention limitations of PCH

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -204,9 +204,15 @@
 <h3>C/Objective-C/C++</h3>
 
   <ul>
+
     <li>Precompiled headers are now supported.  Precompiled headers
         can dramatically speed up compilation of some projects.  There
-        are some restrictions; read the manual for the details.</li>
+        are some known defects in the current precompiled header
+        implementation that will result in compiler crashes in
+        relatively rare situations.  Therefore, precompiled headres
+        should be considered a &quot;technology preview&quot; in this
+        release.  Read the manual for the details for details about 
+	how to use precompiled headers.</li>
     <li>File handling in the preprocessor has been rewritten.  GCC no
         longer gets confused by symlinks and hardlinks, and now has
 	a correct implementation of <code>#import</code> and
