Refer to "3.4 series" instead of "upcoming 3.4 series". By Volker Reichelt <reichelt@igpm.rwth-aachen.de>.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -29,7 +29,7 @@
   <li><a href="#cxx">C++</a>
     <ul>
     <li><a href="#missing">Missing features</a></li>
-    <li><a href="#fixed34">Bugs fixed in the upcoming 3.4 series</a></li>
+    <li><a href="#fixed34">Bugs fixed in the 3.4 series</a></li>
     </ul>
   </li>
   <li><a href="#fortran">Fortran</a></li>
@@ -315,7 +315,7 @@ definitions may be included from the header.</p></dd>
 
 </dl>
 
-<h3><a name="fixed34">Bugs fixed in the upcoming 3.4 series</a></h3>
+<h3><a name="fixed34">Bugs fixed in the 3.4 series</a></h3>
 
 <p>The following bugs are present up to (and including) GCC 3.3.x.
 They have been fixed in 3.4.0.</p>
@@ -755,7 +755,7 @@ component of the two- or three-part version number.  A minor (bug-fix)
 release is designated by a change to the third component only.  Thus GCC
 3.2 and 3.3 are major releases, while 3.3.1 and 3.3.2 are bug-fix releases
 for GCC 3.3.  With the 3.4 series we are introducing a new naming scheme;
-the first release of this series will be 3.4.0 instead of just 3.4.</p>
+the first release of this series is 3.4.0 instead of just 3.4.</p>
 
 <h4>Standard conformance</h4>
 
@@ -777,8 +777,8 @@ However, some non-conforming constructs are allowed when the command-line
 option <code>-fpermissive</code> is used.</p>
 
 <p>Two milestones in standard conformance are GCC 3.0 (including a major
-overhaul of the standard library) and the upcoming 3.4.0 version (with its
-new C++ parser).</p>
+overhaul of the standard library) and the 3.4.0 version (with its new C++
+parser).</p>
 
 <h4>New in GCC 3.0</h4>
 
