Fix headres->headers typo.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -209,7 +209,7 @@
         can dramatically speed up compilation of some projects.  There
         are some known defects in the current precompiled header
         implementation that will result in compiler crashes in
-        relatively rare situations.  Therefore, precompiled headres
+        relatively rare situations.  Therefore, precompiled headers
         should be considered a &quot;technology preview&quot; in this
         release.  Read the manual for the details for details about 
 	how to use precompiled headers.</li>
