Fix another typo.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -211,8 +211,8 @@
         implementation that will result in compiler crashes in
         relatively rare situations.  Therefore, precompiled headers
         should be considered a &quot;technology preview&quot; in this
-        release.  Read the manual for the details for details about 
-	how to use precompiled headers.</li>
+        release.  Read the manual for details about how to use
+        precompiled headers.</li>
     <li>File handling in the preprocessor has been rewritten.  GCC no
         longer gets confused by symlinks and hardlinks, and now has
 	a correct implementation of <code>#import</code> and
