* Add to the 3.4 changes a paragraph about libstdc++.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -576,6 +576,40 @@
 	(<a href="../bugs.html#cxx_rvalbind">further details</a>).</li>
   </ul>
 
+  <h4>Runtime Library (libstdc++)</h4>
+
+  <ul>
+    <li>Optimization work:
+      <ul>
+        <li>Streamlined <code>streambuf</code>, <code>filebuf</code>, separate
+	    synched with C Standard I/O <code>streambuf</code>.</li>
+        <li>All formatted I/O now uses cached locale information.</li>
+        <li>STL optimizations (memory/speed for list, red-black trees as used
+            by sets and maps).</li>
+        <li>More use of GCC builtins.</li>
+        <li>String optimizations (avoid contention on increment/decrement-and-test
+	    of the reference count in the empty-string object, constructor from
+	    input_iterators speedup).</li>
+      </ul>
+    <li>Static linkage size reductions.</li>
+    <li>Large File Support (files larger than 2 GB on 32-bit systems).</li>
+    <li>Wide character and variable encoding <code>filebuf</code> work
+        (UTF-8, Unicode).</li>
+    <li>Generic character traits.</li>
+    <li>Also support <code>wchar_t</code> specializations on Mac OS 10.3.x,
+        FreeBSD 5.x, Solaris 2.7 and above, AIX 5.x, Irix 6.5.</li>
+    <li>The allocator class is now standard-conformant, and two additional
+        extension allocators have been added, mt_alloc and bitmap_allocator.</li>
+    <li>PCH support: -include bits/stdc++.h (2x compile speedup).</li>
+    <li>Rewrote <code>__cxa_demangle</code> with support for C++ style
+        allocators.</li>
+    <li>New debug modes for STL containers and iterators.</li>
+    <li>Testsuite rewrite: five times as many tests, plus increasingly
+        sophisticated tests, including I/O, MT, multi-locale, wide and
+        narrow characters.</li>
+    <li>Use current versions of GNU "autotools" for build/configuration.</li>
+  </ul>
+
 <h3>Objective-C</h3>
 
   <ul>
