Update for integer promotion rules.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -167,7 +167,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>integer promotion rules</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>macros with a variable number of arguments</em></td>
