Fix dlcompat reference link.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -894,7 +894,8 @@
 
     <li>Libgcj is enabled by default. On systems older than <code>
       powerpc-apple-darwin7.0.0</code> you need to install <a
-      href="http://www.opendarwin.org/projects/dlcompat"> dlcompat</a>. </li>
+      href="http://www.opendarwin.org/projects/dlcompat/">dlcompat</a>.
+      </li>
   </ul>
 
 <h3>SPARC</h3>
